@@ -1,3 +1,12 @@
+2004/02/26 22:59 (+0100) kaffeetisch
+
+	* GError.xs: Mark 'file' unused to hush compiler warnings.
+
+	* Glib.xs: Remove debug prints.
+
+	* ParseXSDoc.pm: Check if $firstline is defined before accessing
+	it to hush some warnings.
+
 2004/02/25 19:28 (-0500) rwmcfa1
 
 	* ParseXSDoc.pm, GenPod.pm, GBoxed.xs, GError.xs, GMainLoop.xs,
